<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scroll"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="none">
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/bg_default"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="cn.qfc.mix.MixActivity$PlaceholderFragment">
		
	    <TextView 
	        android:id="@+id/service_status"
	        style="@style/text_style"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	    
	    <Button android:id="@+id/start_service"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_service"/>
	    
	    <Button android:id="@+id/stop_service"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/stop_service"/>
	    
	    <Button android:id="@+id/bind_service"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bind_service"/>
	    
	    <Button android:id="@+id/unbind_service"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/unbind_service"/>
	    
		<TextView
	       android:id="@+id/text1"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/hello_world"
	       android:textColor="@color/red1" />
		
	    <TextView
	        android:id="@+id/text2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world"
	        android:textColor="@color/red2" />
	    
	    <TextView
	        android:id="@+id/text3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/long_hello_world"
	        android:textColor="@color/red3"
	        android:singleLine="true"
	        android:ellipsize="end" />
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/baidu"
	        android:autoLink="web"/>
	    
	    <AutoCompleteTextView 
	        android:id="@+id/mix_autocomplete"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:completionThreshold="1"
	        />
	    
	    <EditText 
	        android:id="@+id/mix_input_words"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:imeOptions="actionGo"
	        android:hint="@string/please_input_words"
	        android:textColorHint="@color/grey"
	        android:singleLine="true"
	        android:maxLength="20"
	        android:textCursorDrawable="@null" />
	    
	    <Spinner 
	        android:id="@+id/mix_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:spinnerMode="dialog"
	        android:rotation="0"/>
	    
	    <TextView 
	        android:id="@+id/progress_text"
	        style="@style/text_style"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	    
	    <SeekBar 
	        android:id="@+id/mix_seekbar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:progress="30"
	        android:max="80"/>
	    
	    <Button android:id="@+id/start_handler"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_handler"/>
	    
	    <Button android:id="@+id/progess_dialog"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/mix_progress_dialog"/>
	    
	    <RatingBar
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:numStars="15"
	        style="?android:attr/ratingBarStyleSmall"
	        android:id="@+id/ratingbar_small"/>
	    
	    <RatingBar
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/ratingBarStyleIndicator"
	        android:id="@+id/ratingbar_middle"/>
	    
	    <RatingBar
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/ratingBarStyle"
	        android:id="@+id/ratingbar_big"/>
	    
	    <TextView 
	        style="@style/text_style"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/hello_world"/>
	    
	    <TextView 
	        style="@style/text_style1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/hello_world"/>
	    
	    <TextView 
	        style="@style/text_style2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/hello_world"/>
	    
	    <TextView 
	        style="@style/text_style3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/hello_world"/>
	    
	    <Button android:id="@+id/relative_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/relative_layout"
	        android:layout_marginTop="5dip"/>
	    
	    <Button android:id="@+id/frame_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/frame_layout"/>
	    
	    <Button android:id="@+id/table_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/table_layout"/>
	    
	    <Button android:id="@+id/absolute_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/absolute_layout"/>
	    
	    <Button android:id="@+id/tab_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/tab_layout"/>
	    
	    <Button android:id="@+id/list_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/list_layout"/>
	    
	    <Button android:id="@+id/grid_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/grid_layout"/>
	    
	    <Button android:id="@+id/running_notification"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/running_notification"/>
	    
	    <Button android:id="@+id/common_notification"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/common_notification"/>
	    
	    <Button android:id="@+id/custom_notification"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/custom_notification"/>
	    
	</LinearLayout>
    
</ScrollView>
