<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dip"
    android:layout_height="match_parent"
    android:background="@color/bg_alert_dialog">

    <ImageView
        android:id="@+id/icon_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mix_alert_dialog"
        android:src="@drawable/information_highlight"
        android:layout_marginLeft="20dip"/>
    
    <TextView
        android:id="@+id/title_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip"
        android:layout_toRightOf="@id/icon_alert_dialog"
        android:textSize="25sp"
        android:textColor="@color/white"/>
    
    <TextView
        android:id="@+id/message_alert_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/title_alert_dialog"
        android:layout_below="@id/icon_alert_dialog"
        android:layout_marginBottom="5dip"
        android:textSize="15sp"
        android:textColor="@color/white"/>
    
    <Button
        android:id="@+id/btn_alert_dialog_ok"
        android:layout_width="65dip"
        android:layout_height="30dip"
        android:layout_below="@id/message_alert_dialog"
        android:layout_marginLeft="65dip"
        android:background="@drawable/btn_selector_change"
        android:text="@string/ok"
        android:textColor="@color/bg3"
        android:gravity="center" />
    
    <Button
        android:id="@+id/btn_alert_dialog_cancel"
        android:layout_width="65dip"
        android:layout_height="30dip"
        android:layout_below="@id/message_alert_dialog"
        android:layout_toRightOf="@id/btn_alert_dialog_ok"
        android:layout_marginLeft="30dip"
        android:background="@drawable/btn_selector_change"
        android:text="@string/cancel"
        android:textColor="@color/bg3" />
    
    <TextView
        android:id="@+id/bottom_alert_dialog"
        android:layout_width="fill_parent"
        android:layout_height="10dip"
        android:layout_below="@id/btn_alert_dialog_cancel"/>

</RelativeLayout>